[gd_scene load_steps=4 format=3 uid="uid://cfwk1hhwqrp2n"]

[ext_resource type="Script" uid="uid://bq1w46mgmwxy" path="res://addons/diisis/editor/src/dropdown_item.gd" id="1_sgb4l"]
[ext_resource type="FontFile" uid="uid://cr070goc8cxgh" path="res://addons/diisis/editor/visuals/theme/fonts/DIISISUI.ttf" id="2_210d5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_or1s3"]
content_margin_left = 4.0
content_margin_top = 2.0
content_margin_right = 4.0
content_margin_bottom = 2.0
bg_color = Color(0.129412, 0.0980392, 0.0588235, 0.686275)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.501961, 0.294118, 0.368627, 0.796078)
border_blend = true

[node name="Control" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sgb4l")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="ExpandButton" type="Button" parent="HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
focus_mode = 0
theme_type_variation = &"ButtonUnpressed"
theme_override_fonts/font = ExtResource("2_210d5")
toggle_mode = true
text = "q"

[node name="DisplayContainer" type="HBoxContainer" parent="HBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="EditButton" type="Button" parent="HBoxContainer/HBoxContainer/DisplayContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 0
text = "Edit"

[node name="TitleLabel" type="Label" parent="HBoxContainer/HBoxContainer/DisplayContainer"]
layout_mode = 2
text = "title"

[node name="EditContainer" type="HBoxContainer" parent="HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SaveTitleButton" type="Button" parent="HBoxContainer/HBoxContainer/EditContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "save"

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/HBoxContainer/EditContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
placeholder_text = "dropdown title"

[node name="DiscardTitleButton" type="Button" parent="HBoxContainer/HBoxContainer/EditContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "discard"

[node name="SpeakerNotice" type="PanelContainer" parent="HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.721569)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_or1s3")

[node name="Label" type="Label" parent="HBoxContainer/HBoxContainer/SpeakerNotice"]
layout_mode = 2
theme_override_colors/font_color = Color(0.992157, 0.678431, 0.513726, 0.839216)
text = "Speaker"

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="DeleteButton" type="Button" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
focus_mode = 0
text = "Delete (NO UNDO)"

[node name="DeleteParametersButton" type="Button" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
focus_mode = 0
text = "..."

[node name="DeleteParameters" type="HBoxContainer" parent="HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="EraseFromTextCheckBox" type="CheckBox" parent="HBoxContainer/PanelContainer/VBoxContainer/DeleteParameters"]
layout_mode = 2
focus_mode = 0
button_pressed = true
text = "Erase from Text"

[node name="OptionsContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="OptionsContainer"]
custom_minimum_size = Vector2(0, -80)
layout_mode = 2
size_flags_vertical = 3

[node name="DropdownOptionsText" type="TextEdit" parent="OptionsContainer/ScrollContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 3
scroll_fit_content_height = true

[node name="DuplicateOptionsLabel" type="RichTextLabel" parent="OptionsContainer"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[color=pink][center]Duplicate Options!"
fit_content = true
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="PanelContainer" type="PanelContainer" parent="OptionsContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsContainer/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsContainer/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="SaveTitleWarning" type="Label" parent="OptionsContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "\"Cannot save options while editing title!\""

[node name="SaveOptionsButton" type="Button" parent="OptionsContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
focus_mode = 0
disabled = true
text = "save options"

[node name="SaveParametersButton" type="Button" parent="OptionsContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "..."

[node name="Parameters" type="HBoxContainer" parent="OptionsContainer/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="ReplaceInTextCheckBox" type="CheckBox" parent="OptionsContainer/HBoxContainer/PanelContainer/VBoxContainer/Parameters"]
layout_mode = 2
focus_mode = 0
button_pressed = true
text = "Replace in Text"

[node name="ReplaceSpeakersCheckBox" type="CheckBox" parent="OptionsContainer/HBoxContainer/PanelContainer/VBoxContainer/Parameters"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
button_pressed = true
text = "Replace in Speakers"

[node name="DiscardOptionsButton" type="Button" parent="OptionsContainer/HBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 8
focus_mode = 0
text = "discard changes"

[connection signal="toggled" from="HBoxContainer/HBoxContainer/ExpandButton" to="." method="_on_expand_button_toggled"]
[connection signal="pressed" from="HBoxContainer/HBoxContainer/DisplayContainer/EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="visibility_changed" from="HBoxContainer/HBoxContainer/EditContainer" to="." method="_on_edit_container_visibility_changed"]
[connection signal="pressed" from="HBoxContainer/HBoxContainer/EditContainer/SaveTitleButton" to="." method="_on_save_title_button_pressed"]
[connection signal="gui_input" from="HBoxContainer/HBoxContainer/EditContainer/LineEdit" to="." method="_on_line_edit_gui_input"]
[connection signal="text_changed" from="HBoxContainer/HBoxContainer/EditContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="HBoxContainer/HBoxContainer/EditContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="HBoxContainer/HBoxContainer/EditContainer/DiscardTitleButton" to="." method="_on_discard_title_button_pressed"]
[connection signal="pressed" from="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2/DeleteParametersButton" to="." method="_on_delete_parameters_button_pressed"]
[connection signal="visibility_changed" from="OptionsContainer" to="." method="_on_options_container_visibility_changed"]
[connection signal="resized" from="OptionsContainer/ScrollContainer/DropdownOptionsText" to="." method="_on_dropdown_options_text_resized"]
[connection signal="text_changed" from="OptionsContainer/ScrollContainer/DropdownOptionsText" to="." method="_on_dropdown_options_text_text_changed"]
[connection signal="pressed" from="OptionsContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/SaveOptionsButton" to="." method="_on_save_options_button_pressed"]
[connection signal="pressed" from="OptionsContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/SaveParametersButton" to="." method="_on_save_parameters_button_pressed"]
[connection signal="toggled" from="OptionsContainer/HBoxContainer/PanelContainer/VBoxContainer/Parameters/ReplaceInTextCheckBox" to="." method="_on_replace_in_text_check_box_toggled"]
[connection signal="pressed" from="OptionsContainer/HBoxContainer/DiscardOptionsButton" to="." method="_on_discard_options_button_pressed"]
